# android_tv_ayar

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
src/: main.py
